feat(auth): add full name to summary response dto